# gemini-camera-ocr

./: .gitignore  README.md  pyproject.toml
gemini_camera_ocr/: app.py  camera.py  gemini_ocr.py  logger.py  settings.py
