[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-camera-ocr"
version = "0.1.0"
description = "OCR from virtual camera every N seconds using Gemini API"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.12.0.88",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "google-genai>=1.56.0",
  "tqdm>=4.67.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gemini_camera_ocr*"]
